[package]
edition = "2021"
license = "MIT"
version = "0.1.0"
name = "tinyvector"
readme = "README.md"
categories = ["science", "database-implementations"]
repository = "https://github.com/m1guelpf/tinyvector"
description = "A tiny embedding database in pure Rust."
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]
keywords = ["database", "nearest-neighbor", "embedding"]

[dependencies]
rayon = "1.7.0"
anyhow = "1.0.71"
serde = "1.0.165"
bincode = "1.3.3"
tracing = "0.1.37"
schemars = "0.8.12"
thiserror = "1.0.40"
lazy_static = "1.4.0"

